more fixes on mobile

--- a/src/MobileApp.css
+++ b/src/MobileApp.css
@@ -1,14 +1,17 @@
-.header-mob{
+#root {
+    overflow: hidden;
+}
 
+.header-mob{
         padding-top: 1%;
         color: antiquewhite;
         text-align: center;
-        height: 40px;
+        height: 30px;
         margin: 20px;
 }
 
 .header-img-mob {
-    height:40px;
+    height:30px;
     -webkit-drop-shadow: 0px 0px 10px antiquewhite;
     -moz-drop-shadow: 0px 0px 10px antiquewhite;
     filter: drop-shadow(0px 0px 10px antiquewhite);
